# Advance_ROOT_Plotting

./: AdvancedPlotGUI  AdvancedPlotGUI.cpp  CHECKLIST.md  CMakeLists.txt  ColumnSelector.cpp  ColumnSelector.h  ColumnSelectorLinkDef.h  DataReader.h  DeveloperGuide.md  Doxyfile  FitUtils.h  IMPLEMENTATION_GUIDE.md  Makefile  PlotTypes.h  ProjectDict_rdict.pcm  README.md  UserManual.md  main.cpp  sample_data.csv  sample_data.txt  setup_docs.sh  test.C
include/: #####AdvancedPlotGUI.h  AdvancedPlotGUI.h  CSVPreviewDialog.h  ColumnSelector.h  ColumnSelectorDialog.h  DataReader.h  DropTextEntry.h  FileHandler.h  FitUtils.h  LinkDef.h  PlotManager.h  PlotTypes.h  RootDataInspector.h  ScriptEngine.h
src/: AdvancedPlotGUI.cpp  CSVPreviewDialog.cpp  ColumnSelector.cpp  ColumnSelectorDialog.cpp  ColumnSelectorDict.cpp  DropTextEntry.cpp  FileHandler.cpp  PlotManager.cpp  PlotTypes.cpp  ProjectDict.cpp  RootDataInspector.cpp  RootEntrySelector.cpp  ScriptEngine.cpp
